set up index page

--- a/basicbash/index.html
+++ b/basicbash/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>W10A</title>
+    <script src="/basicbash/js/app.js" defer></script>
+</head>
+<body>
+    <header>
+        <a href="">Social Media Link</a>
+        <a href="">Social Media Link</a>
+        <a href="">Social Media Link</a>
+    </header>
+    <main>
+        <h1 id="title">These are my favorite things lately</h1>
+        <p>&#128525;</p>
+        <ul id= "list">
+            <li>my dog</li>
+            <li>yoga</li>
+            <li>green juice</li>
+            <li>illenium</li>
+            <li>skincare</li>
+        </ul>
+    </main>
+    <div>
+        <h2>My favourite things Ive done recently</h2>
+        <p>&#128151;</p>
+        <p>Took a few days off to go to my home town of Grande Cache. It was so nice to see some friends.
+            I didnt realize how much this pandemic affected me not socializing. Having no friends in Leduc is tough so im glad
+            i decided to go.
+        </p>
+        <p>I started yoga about a week ago and Ive really noticed a difference in myself. Taking a moment
+            to just focus on breathing is something i really needed with how much stress and anxiety im feeling these days.
+        </p>
+    </div>
+    <footer>
+        
+    </footer>
+</body>
+</html>
