completed assignment..now ill try some additional stuff

--- a/basicbash/index.html
+++ b/basicbash/index.html
@@ -8,14 +8,15 @@
     <script src="/basicbash/js/app.js" defer></script>
 </head>
 <body>
-    <header>
-        <a href="">Social Media Link</a>
-        <a href="">Social Media Link</a>
-        <a href="">Social Media Link</a>
+    <header class="socialMedia">
+        <a href="">Social Media Twitter Link</a>
+        <a href="">Social Media Instagram Link</a>
+        <a href="">Social Media Pinterest Link</a>
     </header>
     <main>
         <h1 id="title">These are my favorite things lately</h1>
-        <p>&#128525;</p>
+        <h2> A list of some of my favourite things lately</h2>
+        <p class="emoji">&#128525;</p>
         <ul id= "list">
             <li>my dog</li>
             <li>yoga</li>
@@ -23,10 +24,16 @@
             <li>illenium</li>
             <li>skincare</li>
         </ul>
+        <article class="firstArticle">
+            <h3>Why you should try yoga</h3>
+            <p>
+                Yoga can make you stronger and more flexible. It's a great way to stay limber and energetic. You'll also feel more focused and alert. And yoga can help you feel great and function better in your daily life.  
+            </p>
+        </article>
     </main>
     <div>
         <h2>My favourite things Ive done recently</h2>
-        <p>&#128151;</p>
+        <p class="emoji">&#128151;</p>
         <p>Took a few days off to go to my home town of Grande Cache. It was so nice to see some friends.
             I didnt realize how much this pandemic affected me not socializing. Having no friends in Leduc is tough so im glad
             i decided to go.
@@ -35,8 +42,8 @@
             to just focus on breathing is something i really needed with how much stress and anxiety im feeling these days.
         </p>
     </div>
-    <footer>
-        
+    <footer id="bottom">
+        <h1>Thanks for reading</h1>
     </footer>
 </body>
 </html>
